force-app/main/default/objects/FEC_MDM_Additional_Field__c/FEC_MDM_Additional_Field__c.object-meta.xml
<CustomObject>
    <label>MDM Additional Field</label>
    <nameField>
        <label>FEC Name EN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC_MDM_Additional_Fields__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>