force-app/main/default/objects/FEC_MDM_Additional_Field__c/fields/FEC_Field_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>FEC_Field_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FEC Field Mandatory</label>
    <type>Checkbox</type>
</CustomField>