force-app/main/default/objects/FEC_MDM_Additional_Field__c/fields/FEC_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Type__c</fullName>
    <label>FEC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <color>#FFFF66</color>
                <label>String</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Multi Text Values</fullName>
            </value>
            <value>
                <fullName>Phone number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>